# AllStatTabs

./: .gitignore  .gitmodules  README.md  build_release_files.py  build_single_patch.py  patch.asm  settings.conf
gui/: .gitignore  .settingsgui.patch.conf  Cargo.toml
gui/procmacros/builder/: Cargo.toml
gui/procmacros/builder/src/: lib.rs
gui/procmacros/pathsepstring/: Cargo.toml
gui/procmacros/pathsepstring/src/: lib.rs
gui/src/: main.rs
gui/src/gui/: byte_settings.rs  mod.rs  update.rs
gui/src/gui/view/: buttons.rs  help.rs  help_view.rs  mod.rs  patch.rs  settings.rs  types.rs
gui/src/settings/: expgoldtech.rs  file.rs  mod.rs  patch.rs  tabs.rs
ips/: CT_AllStatTabs_By1.ips  CT_AllStatTabs_By1_PowHit.ips  CT_AllStatTabs_By2.ips  CT_AllStatTabs_By2_PowHit.ips
src/: patch.asm  settings.asm
src/expgoldtech/: hook.asm  routine.asm  settings.asm
src/tabs/: hook.asm  routine.asm  settings.asm  text.asm
