[package]
name = "AllStatTabsSettings"
version = "1.2.1"
authors = ["phi <ficarde@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["glow"] }
nfd = { path = "nfd-rs" }
const_format = "0.2"
builder = { path = "procmacros/builder" }
pathsepstring = { path = "procmacros/pathsepstring" }
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"
tempfile = "3.1"

